# rclaw

./: .gitignore  Cargo.toml  LICENSE  README.md
container/: Dockerfile.base  build.sh  entrypoint.js
container/gemini/: Dockerfile
container/setup/memory/: IDENTITY.md  USER.md
docs/: INTERNALS.md
src/: auth.rs  auth_discovery.rs  container.rs  db.rs  main.rs  task_scheduler.rs  ui.rs
